--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "type": "module",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "npx nodemon src/app.js",
+    "start": "node src/app.js",
     "dev": "NODE_ENV=development npx nodemon src/app.js",
     "test": "NODE_ENV=test npx jest --watchAll"
   },
